syntax = "proto3";

package lib.grpc.services.auto;
option java_outer_classname = "BookLibraryProtos";

service BookService
{
	rpc addBook(BookRequest) returns (SingleBookResponse);
	rpc getBooksByTitle(TitleRequest) returns (BookListResponse);
	rpc getBookCounts(EmptyRequest) returns (CountResponse);
	rpc getAllBooks(EmptyRequest) returns (BookListResponse);
	rpc deleteBookByIsbn(IsbnRequest) returns (GenericResponse);
	rpc getBooksByAuthorList(MultipleAuthorsRequest) returns (BookListResponse);

	rpc login(UserLoginRequest) returns (GenericResponse);
	rpc logout(EmptyRequest) returns (GenericResponse);
	rpc saveBookToServer(IsbnRequest) returns (GenericResponse);
	rpc fetchAllBooksFromServer(EmptyRequest) returns (BookListResponse);
	rpc downloadBookFromServer(IsbnRequest) returns (SingleBookResponse);
}

// <------------------ Requests ------------------>
message EmptyRequest
{

}

message BookDetails
{
	int64 isbn=1;
	string title=2;
	string author=3;
	string publisher=4;
	string repoId=5;
	string previewPath=6;
}

message BookRequest
{
	int32 bookRequestId=1;
	BookDetails bookDetails=2;
}

message TitleRequest
{
	string title=1;
}

message IsbnRequest
{
	int64 isbn=1;
}

message SingleAuthorRequest
{
	string author=1;
}

message MultipleAuthorsRequest
{
	repeated SingleAuthorRequest authorRequest=1;
}

message UserLoginRequest
{
	string serverUrl=1;
	string userId=2;
	string password=3;
}

// <---------------------- Responses --------------------->
message GenericResponse
{
	enum ResponseType
	{
		NONE=0;
		SUCCESS=1;
		WARNING=2;
		ERROR=3;
	}

	ResponseType type=1;
	string message=2;
}

message SingleBookResponse
{
	BookDetails bookDetails=1;
	GenericResponse genericResponse=2;
}

message BookListResponse
{
	repeated BookDetails bookList=1;
	GenericResponse genericResponse=2;
}

message CountResponse
{
	int32 counts=1;
	GenericResponse genericResponse=2;
}

